style.css
/* ... */
.ctas-menu li{
    /* border: 1px solid black; */
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
    /* border-radius: 5px; */
    width: 80%;
    border-bottom: 1px solid var(--bg-dark);
    font-weight: bolder;
    /* display: none; */
    /* background-color: red; */
}

.ctas-menu li a{
    /* background-color: yellow; */
    width: 100%;
    height: 100%;
    display:flex;
    /* padding: 1rem; */
}

.ctas-menu li a i{
    width: 30%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    /* border: 1px solid black; */
}

.ctas-menu li a p{
    width: 70%;
    height: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    font-size: 1.2rem;
}



.site-header .menu-block{
    width: 50%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    /* border: 1px solid black; */
}

.menu-block .main-menu{
    position: absolute;
    top: 85%;
    right: 0;
    border: 1px solid var(--bg-dark);
    list-style-type: none;
    background-color: var(--bg-light);
    width: 400%;
    /* height: 200%; */
    height: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    border-radius: 5px;
    /* display: none; */
    opacity: 0;
    /* transform : translateX(120%); */
    transition: all .3s ease-in-out;
    z-index: 10;
    /* background-color: red; */
}

.main-menu li{
    /* border: 1px solid black; */
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
    /* border-radius: 5px; */
    width: 80%;
    border-bottom: 1px solid var(--bg-dark);
    font-weight: bolder;
    /* display: none; */
}

.main-menu li a{
    text-decoration: none;
    color: black;
}

.main-menu li:last-child{
    border-bottom: none;
}





/* *********************** MAIN SECTION **************************** */

.main-block{
    padding-top: 12vh;
    width: 100%;
    height: 100vh;
    background-color: #198754;
    overflow-x: hidden;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* overflow: hidden; */
}

.main-block .hero-image{
    width: 100%;
    height: 100%;
    background-size: 250% 100%;
    /* background-image:linear-gradient(to left top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2)), url("./assets/mech1.jpg"); */
    background-image:linear-gradient(to right, rgba(0, 0, 0, 0.8)), url("./assets/mech3.jpg");
    /* background-image: url("./assets/mech3.jpg"); */
    /* background-position: 57% 10%; */
    background-position: center center;
    /* object-fit: contain; */
    background-repeat: no-repeat;
    /* background-size: cover; */
    /* transform: scale(.8); */
    /* box-shadow: inset 0 5px 10px 10px white; */
}

.main-block .hero-info{
    position: absolute;
    width: 90%;
    height: 80%;
    /* border: 1px solid white; */
    border-radius: 10px;
    color: white;
    display: flex;
    flex-direction: column;
    padding: 2rem 0;
    /* background-color: blue; */
}

.hero-info .hero-info-name-block{
    width: 100%;
    height: 40%;
    /* background-color: #fd7e14; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
        /* background-color: yellow; */

}

.hero-info .hero-info-name-block h1{
    margin-bottom: 1.5rem;
}

.hero-info .hero-info-name-block h4{
    margin: .5rem;
}

.hero-info .hero-info-name-block button{
    padding: 1rem 4rem;
    background-color: none;
    border: 1px solid white;
    border-radius: 10px;
    margin-top: 2rem;
    background-color: transparent;
    color: white;
    font-weight: bolder;
    font-size: 1.2rem;
}

.hero-info .hero-info-address-block{
    width: 100%;
    height: 60%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    /* background-color: red; */
}

.hero-info-address-block .address-item{
    display: flex;
    border-bottom: 1px solid white;
    width: 100%;
    height: 30%;
    padding: 0 2rem;
}

.hero-info-address-block .address-item .hero-info-number{
    padding: 1rem 0;
}


.hero-info-address-block .address-item .item h3{
    text-decoration: underline;
}

.hero-info-address-block .address-item .icon{
    width: 20%;
    height: 100%;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    font-size: 2rem;
    /* background-color: red; */
}

.hero-info-address-block .address-item .item{
    width: 80%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

/* ********************************************* SERVICES **************************************** */

.main-container #site-services{
    padding-top: 12vh;
    width: 100%;
    height: 150vh;
    /* background-color: yellow; */
}

#site-services .services-header{
    width: 100%;
    height: 7%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#site-services .services-main{
    width: 100%;
    height: 93%;
    /* background-color: #198754; */
    display: grid;
    grid-template-rows: repeat(8,1fr);
    padding: 1rem;
    gap: .5rem;
    /* align-items: start;
    justify-items: start; */
}

.services-main .services-item{
    border: 1px solid black;
    display: flex;
    border-radius: 5px;
    /* background-color: #dc3545; */
}

.services-item .service-image{
    width: 45%;
    height: 100%;
    /* background-color: #0d6efd; */
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}

.services-item .service-image img{
    width: 50%;
    height: 50%;
    object-fit: contain;
}
/* ... */

